# graphify

./: .gitignore  .tasknotes.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  analysis_imports.json  analysis_imports.md  analyze.py  build_graph.py  edges.csv  evidence-template.md  extractor.py  graph-ana-service.json  graph.json  graphify.py  graphify.toml  graphify_extract.py  install.sh  pipeline.py  risk_report.json  risk_report.py  scope-ana-service.md  scope.md
.claude/: session-brief.md  session-context-gf.json
.claude/commands/: analyze.md  tostudy-graphify-mapeamento-arquitetural-de-codebases-com-ia-e-knowl.md
.cursor/rules/: tostudy-graphify-mapeamento-arquitetural-de-codebases-com-ia-e-knowl.mdc  tostudy.mdc
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
.tostudy/: AGENTS.md  workspace.json
_hub/vaultpilot-lab/20-fontes/: Trump anuncia bloqueio 'de todos os navios' que tentarem entrar ou sair de Ormuz 1.md  Trump anuncia bloqueio 'de todos os navios' que tentarem entrar ou sair de Ormuz.md
crates/graphify-cli/: Cargo.toml
crates/graphify-cli/src/: main.rs  session.rs  watch.rs
crates/graphify-cli/src/install/: codex_bridge.rs  copy_plan.rs  frontmatter.rs  manifest.rs  mcp_merge.rs  mod.rs
crates/graphify-cli/tests/: check_report_write_test.rs  compare_integration.rs  diff_error_messages.rs  feat_049_multi_root.rs  go_e2e.rs  init_command.rs  install_integrations.rs  php_e2e.rs  pr_summary_integration.rs  rust_feat031.rs  rust_feat046.rs  rust_feat047.rs  suggest_integration.rs
crates/graphify-cli/tests/fixtures/check_write/: graphify.toml
crates/graphify-cli/tests/fixtures/check_write/app/: main.py
crates/graphify-cli/tests/fixtures/pr_summary/: analysis.json  check-report.json  drift-report.json
crates/graphify-cli/tests/fixtures/suggest/: graphify.toml
crates/graphify-cli/tests/fixtures/suggest/proj-a/: graph.json
crates/graphify-cli/tests/fixtures/suggest/proj-b/: graph.json
crates/graphify-core/: Cargo.toml
crates/graphify-core/src/: community.rs  consolidation.rs  contract.rs  cycles.rs  diff.rs  graph.rs  history.rs  lib.rs  metrics.rs  policy.rs  query.rs  stubs.rs  types.rs
crates/graphify-extract/: Cargo.toml
crates/graphify-extract/src/: cache.rs  drizzle.rs  go.rs  lang.rs  lib.rs  local_prefix.rs  php.rs  python.rs  reexport_graph.rs  resolver.rs  rust_lang.rs  stubs.rs  ts_contract.rs  typescript.rs  walker.rs  workspace_reexport.rs
crates/graphify-extract/tests/: php_fixture.rs
crates/graphify-mcp/: Cargo.toml
crates/graphify-mcp/src/: main.rs  server.rs
crates/graphify-mcp/tests/: integration.rs
crates/graphify-report/: Cargo.toml
crates/graphify-report/assets/: graph.css  graph.js
crates/graphify-report/src/: check_report.rs  compare_json.rs  consolidation.rs  contract_json.rs  contract_markdown.rs  csv.rs  diff_json.rs  diff_markdown.rs  graphml.rs  html.rs  json.rs  lib.rs  markdown.rs  neo4j.rs  obsidian.rs  pr_summary.rs  smells.rs  suggest.rs  time_utils.rs  trend_json.rs  trend_markdown.rs
docs/00-Index/: 🏠 Home.md  📚 Documentation Map.md  🔍 Quick Reference.md
docs/01-Getting-Started/: AI Integrations.md  Configuration.md  First Steps.md  Installation.md  Troubleshooting.md
docs/02-Architecture/: Crate - graphify-cli.md  Crate - graphify-core.md  Crate - graphify-extract.md  Crate - graphify-mcp.md  Crate - graphify-report.md  Data Flow.md  System Overview.md  Tech Stack.md
docs/03-API/: CLI Reference.md  MCP Server.md
docs/03-API/Commands/: analyze.md  check.md  diff.md  explain.md  extract.md  init.md  install-integrations.md  path.md  pr-summary.md  query.md  report.md  run.md  shell.md  trend.md  watch.md
docs/06-ADRs/: ADR-001 Rust Rewrite.md  ADR-002 Interactive HTML Visualization.md  ADR-003 SHA256 Extraction Cache.md  ADR-004 Graph Query Interface.md  ADR-005 MCP Server.md  ADR-006 Edge Confidence Scoring.md  ADR-007 Architectural Drift Detection.md  ADR-008 CI Quality Gates.md  ADR-009 Watch Mode.md  ADR-010 Auto-Detect Local Prefix.md  ADR-011 Contract Drift Detection.md  ADR-012 PR Summary CLI.md  ADR-Index.md  _ADR-Template.md
docs/08-Glossary/: Terms.md
docs/TaskNotes/: sprint.md
docs/TaskNotes/Tasks/: BUG-001-python-relative-import-misresolution-creates-false-positive-cycles.md  BUG-002-ts-reexport-missing-defines-edge.md  BUG-003-cross-project-summary-is-stub.md  BUG-004-placeholder-nodes-always-tagged-python.md  BUG-005-csv-nodes-missing-columns.md  BUG-006-walker-excludes-miss-test-spec-files.md  BUG-007-ts-workspace-alias-mangled-node-ids.md  BUG-008-louvain-degenerates-on-sparse-graphs.md  BUG-009-walker-misses-non-src-package-structures.md  BUG-010-summary-json-includes-full-edge-list.md  BUG-011-workspace-alias-still-mangled-with-local-prefix.md  BUG-012-summary-json-missing-communities-count.md  BUG-013-run-leaves-stale-report-directories-for-removed-projects.md  BUG-014-graphify-diff-before-history-json-fails-with-cryptic-schema-error.md  BUG-015-bug-cycle-detection-counts-barrel-self-cycles-as-architectural-cycles-post-feat-028-breaking-consumer-pre-push-gates.md  BUG-016-rust-crate-resolution-drops-local-prefix-intra-crate-edges-go-non-local.md  BUG-017-feat-031-resolver-alias-rewrite-oom.md  (+74 more)
docs/adr/: 0001-workspace-reexport-graph-gate.md  0002-cargo-workspace-reexport-graph-gate.md
docs/benchmarks/: 2026-04-20-feat-021-025-cursos-regression.md  2026-04-20-feat-029-cross-project-edges.md  2026-04-20-feat-029-summary-round-a.json  2026-04-20-feat-029-summary-round-b.json  2026-04-20-feat-029-summary-round-c.json
docs/plans/: 2026-04-12-bug-001-python-relative-import-design.md
integrations/: .manifest.lock.json  README.md
integrations/mcp/: claude-code.json  codex.toml
memory-bank/: activeContext.md
output/: graph_edges.csv  graph_nodes.csv  quality_report.json
report/: analysis.json  architecture_report.md
tests/: consolidation_integration.rs  contract_integration.rs  history_trend_integration.rs  html_integration.rs  integration_test.rs  query_integration.rs  trend_cli_integration.rs
(+78 files in other folders)
