[workspace]
resolver = "2"
members = [
    "crates/graphify-core",
    "crates/graphify-extract",
    "crates/graphify-report",
    "crates/graphify-cli",
    "crates/graphify-mcp",
    ".",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tempfile = "3"
serde_json = "1"

[package]
name = "graphify-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
graphify-core = { path = "crates/graphify-core" }
graphify-report = { path = "crates/graphify-report" }
