[workspace]
resolver = "2"
members = [
    "crates/graphify-core",
    "crates/graphify-extract",
    "crates/graphify-report",
    "crates/graphify-cli",
    "crates/graphify-mcp",
    ".",
]

[workspace.package]
version = "0.13.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/parisgroup-ai/graphify"

[workspace.dependencies]
graphify-core = { version = "0.13.1", path = "crates/graphify-core" }
graphify-extract = { version = "0.13.1", path = "crates/graphify-extract" }
graphify-report = { version = "0.13.1", path = "crates/graphify-report" }
tempfile = "3"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
include_dir = "0.7"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
which = "6"

[package]
name = "graphify-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
graphify-core = { path = "crates/graphify-core" }
graphify-report = { path = "crates/graphify-report" }
