[package]
name = "graphify-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "graphify"
path = "src/main.rs"

[dependencies]
graphify-core = { path = "../graphify-core" }
graphify-extract = { path = "../graphify-extract" }
graphify-report = { path = "../graphify-report" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
notify = "7"
notify-debouncer-mini = "0.5"
