[package]
name = "graphify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Graphify architecture analysis."

[[bin]]
name = "graphify"
path = "src/main.rs"

[dependencies]
graphify-core = { workspace = true }
graphify-extract = { workspace = true }
graphify-report = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
notify = "7"
notify-debouncer-mini = "0.5"
serde_yaml = { workspace = true }
sha2 = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
graphify-report = { workspace = true }
sha2 = { workspace = true }
