[package]
name = "graphify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core graph model, analysis algorithms, and query engine for Graphify."

[dependencies]
petgraph = "0.7"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
