[package]
name = "graphify-extract"
version.workspace = true
edition.workspace = true

[dependencies]
graphify-core = { path = "../graphify-core" }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
rayon = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
