[package]
name = "graphify-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language extractors and module resolution for Graphify."

[dependencies]
graphify-core = { workspace = true }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-php = "0.23"
rayon = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
