[package]
name = "graphify-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server that exposes Graphify queries to AI assistants."

[[bin]]
name = "graphify-mcp"
path = "src/main.rs"

[dependencies]
graphify-core = { workspace = true }
graphify-extract = { workspace = true }
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
rayon = "1"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
