[package]
name = "graphify-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Report renderers and export formats for Graphify analysis output."

[dependencies]
graphify-core = { workspace = true }
graphify-extract = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
tempfile = "3"
